frontend/src/app/components/master-page/master-page.component.scss
.sticky-header {
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  width: 100%;
  background-color: var(--bg);
  z-index: 100;
}

li.nav-item.active {
  background-color: var(--tertiary);
}

fa-icon {
  font-size: 1.66em;
}

.navbar {
  z-index: 100;
  min-height: 64px;
  width: 100%;
  background-color: var(--nav-bg);
}

li.nav-item {
  margin: auto 10px;
  padding-left: 10px;
  padding-right: 10px;
  align-content: center;
  .svg-wrapper {
    height: 19.2px;
    width: auto;
    margin-bottom: 8px;
  }
  @media (max-width: 991px) {
    margin: 0;
    padding-left: 8px;
    padding-right: 8px;
    .svg-wrapper {
      height: 25.6px;
      width: auto;
      margin-bottom: 0;
    }
    .nav-link {
      padding: 12px 0;
    }

  }
  @media (max-width: 429px) {
    margin: 0;
    padding-left: 6px;
    padding-right: 6px;
  }
  @media (max-width: 369px) {
    margin: 0;
    padding-left: 4px;
    padding-right: 4px;
  }
}

@media (min-width: 992px) {
  .navbar {
    padding: 0rem 2rem;
  }
  fa-icon {
    font-size: 1.2em;
  }
  .dropdown-container {
    margin-right: 16px;
  }
  li.nav-item {
    margin: auto 0px;
    padding: 10px;
  }
}

.navbar-nav {
  background: var(--nav-bg);
  bottom: 0;
  box-shadow: 0 0 15px 0 var(--nav-shadow);
  flex-direction: row;
  left: 0;
  justify-content: space-between;
  position: fixed;
  width: 100%;
  @media (min-width: 992px) {
    background: transparent;
    box-shadow: none;
    position: relative;
    width: auto;
  }
  a {
    font-size: 0.8em;
    @media (min-width: 370px) {
      font-size: 0.9em;
    }
    @media (min-width: 430px) {
      font-size: 1em;
    }
  }

  li {
    flex-grow: 1; /* Allows items to grow */
    text-align: center; /* For text alignment */
  }
}


.navbar-collapse {
  justify-content: flex-end;
  @media (min-width: 564px) {
    flex-basis: auto;
  }
}

@media (min-width: 992px) {
  .navbar-collapse {
    justify-content: space-between;
  }
}

.navbar {
  .dropdown {
    .dropdown-toggle {
      width: 62px;
      height: 36px;
      margin-top: 5px;
    }
  }
}

.navbar-brand {
  position: relative;
}

.navbar-brand.dual-logos {
  justify-content: space-between;
  @media (max-width: 767.98px) {
    width: 100%;
  }
}

nav {
  box-shadow: 0px 0px 15px 0px var(--nav-shadow);
}

.connection-badge {
  position: absolute;
  top: 12px;
  width: 100%;
}

.badge {
  margin: 0 auto;
  display: table;
}

.mainnet.active {
  background-color: var(--tertiary);
}

.liquid.active {
  background-color: var(--liquid);
}

.liquidtestnet.active {
  background-color: var(--liquidtestnet);
}

.testnet.active {
  background-color: var(--testnet);
}

.signet.active {
  background-color: var(--signet);
}

.regtest.active {
  background-color: var(--regtest);
}

.dropdown-divider {
  border-top: 1px solid #121420;
}

.dropdown-toggle::after {
  vertical-align: 0.1em;
}

.dropdown-item {
  display: flex;
  align-items: center;
}

@media (min-width: 991px) {
  .search-form-container {
    width: 100%;
    max-width: 500px;
    padding-left: 15px;
  }
}
.navbar-dark .navbar-nav .nav-link {
  color: var(--icon);
}

.subdomain_logo {
  max-height: 35px;
  overflow: clip;
  max-width: 100%;
  margin: auto;
  align-self: center;
  .rounded {
    border-radius: 5px;
  }

  &.custom_logo {
    max-height: 48px;
    margin-right: 1em;
  }
 
  &.mobile_logo {
    margin-right: 0;
  }

  &.custom_logo.mobile_logo {
    max-height: 42px;
  }
}

.subdomain_container {
  max-width: 140px;
  text-align: center;
  align-self: center;
}

.vertical-line {
  border-left: 1px solid #444;
  height: 30px;
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 3px;
}

.logo-holder {
  display: flex;
  flex-direction: row;
}

.navbar-brand {
  flex-direction: row;
  display: flex;
}

.mempool-logo, app-svg-images {
  align-self: center;
  width: 140px;
  height: 35px;
}

.beta {
  display: inline;
  position: absolute;
  margin: 24px 0px 0px -15px;
  font-size: 8px;
  @media (max-width: 767.98px) {
    margin: 30px 0px 0px -19px;
    font-size: 7px;
  }
  @media (max-width: 3429px) {
    margin: 25px 0px 0px -19px;
    font-size: 7px;
  }
  @media (max-width: 369px) {
    margin: 20px 0px 0px -19px;
    font-size: 7px;
  }
}

.beta-network {
  font-size: 8px;
}

.current-network-svg {
  width: 20px;
  height: 20px;
  margin-right: 5px;
}

:host-context(.rtl-layout) {
  .current-network-svg {
    width: 20px;
    height: 20px;
    margin-left: 5px;
    margin-right: 0px;
  }
}

.profile_image_container {
  width: 35px;
  margin-right: 15px;
  text-align: center;
  align-self: center;
  cursor: pointer;
  .anon {
    border: 1.5px solid var(--transparent-fg);
    color: var(--transparent-fg);
    border-radius: 5px;
  }
}
.profile_image {
  height: 35px;
  border-radius: 5px;
}

main {
  transition: 0.2s;
  transition-property: max-width;
}

// empty sidenav
.empty-sidenav {
  z-index: 1;
  background-color: transparent;
  width: 0px;
  height: calc(100vh - 65px);
  position: sticky;
  top: 65px;
  padding-bottom: 20px;
}

